src/test/resources/semantic/reject/printlnArrayType.ul
void main() {
}

void foo() {
    int[5] array;
    println array;
}
